Correction présentation bootstrap

--- a/src/Pigass/UserBundle/Resources/views/Register/index.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/index.html.twig
@@ -47,7 +47,7 @@
 {% block content %}
     <ul class="entities list-group">
     {% for membership in memberships %}
-        <li class="entity person list-group-item">
+        <li class="entity person list-group-item row">
             <span class="btn-group pull-right">
                 <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown">Actions <span class="caret"></span></button>
                 <ul class="dropdown-menu">
