Correction de core_structure_edit

--- a/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
@@ -53,7 +53,7 @@
                                 </a>
                             </li>
                             <li class="action">
-                                <a href="{{ path('core_structure_edit', {'id': structure.id}) }}" title="Modifier la structure '{{ structure.name }}'" class="edit">
+                                <a href="{{ path('core_structure_edit', {'slug': structure.slug}) }}" title="Modifier la structure '{{ structure.name }}'" class="edit">
                                     {{ icon('pencil') }} Modifier
                                 </a>
                             </li>
