--- a/src/Pigass/UserBundle/Resources/views/Register/list.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/list.html.twig
@@ -89,23 +89,25 @@
                     <ul class="dropdown-menu">
                         <li>
                             <a href="{{ path('user_register_infos', {'id': membership.id, 'userid': userid}) }}" title="Afficher les réponses aux questions complémentaires">
-                                <span class="glyphicon glyphicon-question-sign"></span>
-                                Questions complémentaires
+                                {{ icon('question-sign') }} Questions complémentaires
+                            </a>
+                        </li>
+                        <li>
+                            <a href="{{ path('core_receipt_build', {'id': membership.id}) }}" title="Télécharger le reçu fiscal">
+                                {{ icon('piggy-bank') }} Reçu fiscal
                             </a>
                         </li>
                         {% if membership.status == 'registered' or membership.payedOn is null %}
                             {% if is_granted('ROLE_ADMIN') %}
                                 <li>
                                     <a href="{{ path('user_register_validate', {'id': membership.id, 'userid': userid}) }}" title="Valider la réception du paiement pour cette adhésion">
-                                        <span class="glyphicon glyphicon-ok-circle"></span>
-                                        Valider
+                                    {{ icon('ok-circle') }} Valider
                                     </a>
                                 </li>
                             {% endif %}
                             <li>
                                 <a href="{{ path('user_register_delete', {'id': membership.id, 'userid': userid}) }}" title="Supprimer cette adhésion">
-                                    <span class="glyphicon glyphicon-remove-circle"></span>
-                                    Supprimer
+                                    {{ icon('remove-circle') }} Supprimer
                                 </a>
                             </li>
                         {% elseif membership.status == 'paid' %}
