--- a/src/Pigass/CoreBundle/Resources/public/css/main.css
+++ b/src/Pigass/CoreBundle/Resources/public/css/main.css
@@ -141,7 +141,6 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 #footer .miniature img{ vertical-align: middle; }
 #footer form{ margin: 10px 0; color: #5f6364; }
 
-.logo { display: block; max-width: 60px; max-height: 40px; }
 .error_list{ color: red; }
 .flash_notice{ margin: 3px 0; padding: 7px; background-color: #cfc; }
 .flash_error{ margin: 3px 0; padding: 7px; background-color: #f33; color: #fff; }
@@ -162,3 +161,7 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 .right { text-align: right }
 
 .row { margin-left: 0; margin-right: 0; }
+
+img.sign { display: block; max-width: 100px; max-height: 100px; }
+img.logo { display: block; max-width: 60px; max-height: 40px; }
+img.logo-large { display: block; max-width: 100px; max-height: 60px; }
