--- a/src/Pigass/CoreBundle/Resources/views/Receipt/printPDF.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Receipt/printPDF.html.twig
@@ -37,16 +37,20 @@
                     <div class="col-xs-4 value">{{ membership.person.birthday|date('d/m/Y') }}</div>
                     <div class="col-xs-2 title">à :</div>
                     <div class="col-xs-4 value">{{ membership.person.birthplace }}</div>
-                    <div class="col-xs-3 title">Adresse email :</div>
-                    <div class="col-xs-9 value">{{ membership.person.user.email }}</div>
-                    <div class="col-xs-4 title">Adresse professionnelle :</div>
-                    <div class="col-xs-8 value">{{ membership.person.PrintableAddress(false) }}</div>
+                    <div class="col-xs-12 blank"> </div>
                     <div class="col-xs-12">Je, sous-signé {{ receipt.person }}, {{ receipt.position }}, certifie que {{ membership.person.title }} {{ membership.person }} a bien adhéré au syndicat {{ membership.structure.name }} pour l'année {% if receipt.begin|date('Y') != receipt.end|date('Y') %}{{ receipt.begin|date('Y') }} - {% endif %}{{ receipt.end|date('Y') }}.en payant la somme de {{ membership.amount }} euros.</div>
+                    <div class="col-xs-12 blank"> </div>
+                    <div class="col-xs-12">
+                        <div class="pull-right">
+                            <div class="title">Le {{ "now"|date('d/m/Y') }}</div>
+                            <div><img src="{{ absolute_url(asset(vich_uploader_asset(receipt, 'image'))) }}" alt="signature électronique" class="sign"></div>
+                            <div>{{ receipt.person }}</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="panel-footer jumbotron">
-                    <div class="title">Le {{ "now"|date('d/m/Y') }}</div>
-                    <div><img src="{{ absolute_url(asset(vich_uploader_asset(receipt, 'image'))) }}" alt="signature électronique"></div>
-                    <div>{{ receipt.person }}</div>
+                <div class="panel-footer row">
+                    <div class="col-xs-8">{{ membership.structure.name }}</div>
+                    <div class="col-xs-4"><img src="{{ absolute_url(asset(membership.structure.logo)) }}" alt="Logo de {{ membership.structure.name }}" class="logo-large" /></div>
                 </div>
             </div>
         </div>
