--- a/src/Pigass/CoreBundle/Resources/public/css/main.css
+++ b/src/Pigass/CoreBundle/Resources/public/css/main.css
@@ -162,6 +162,7 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 
 .row { margin-left: 0; margin-right: 0; }
 
-img.sign { display: block; max-width: 100px; max-height: 100px; }
+img.sign { display: block; max-width: 100px; max-height: 80px; }
 img.logo { display: block; max-width: 60px; max-height: 40px; }
+img.logo-small { display: block; max-width: 40px; max-height: 40px; }
 img.logo-large { display: block; max-width: 100px; max-height: 60px; }
