--- a/src/Pigass/CoreBundle/Resources/views/Receipt/printPDF.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Receipt/printPDF.html.twig
@@ -15,6 +15,10 @@
             .value { font-weight: bold; }
             .jumbotron { width: 100%; margin: 0; }
             .centered { text-align: center; }
+            img.sign { display: block; max-width: 150px; max-height: 100px; }
+            img.logo { display: block; max-width: 60px; max-height: 40px; }
+            img.logo-small { display: block; max-width: 40px; max-height: 40px; }
+            img.logo-large { display: block; max-width: 150px; max-height: 100px; }
         </style>
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -25,7 +29,7 @@
         <div class="container">
             <div class="panel panel-default">
                 <div class="panel-header jumbotron row">
-                    <div class="col-xs-2"><img src="{{ absolute_url(asset(membership.structure.logo)) }}" alt="Logo de {{ membership.structure.name }}" /></div>
+                    <div class="col-xs-2"><img src="{{ absolute_url(asset('uploads/' ~ membership.structure.logo)) }}" alt="Logo de {{ membership.structure.name }}" class="logo-large" /></div>
                     <h1 class="col-xs-10 centered">Reçu fiscal {% if receipt.end|date('Y') != receipt.begin|date('Y') %}{{ receipt.begin|date('Y') }} - {% endif %}{{ receipt.end|date('Y') }}</h1>
                 </div>
                 <div class="panel-body row">
@@ -37,9 +41,9 @@
                     <div class="col-xs-4 value">{{ membership.person.birthday|date('d/m/Y') }}</div>
                     <div class="col-xs-2 title">à :</div>
                     <div class="col-xs-4 value">{{ membership.person.birthplace }}</div>
-                    <div class="col-xs-12 blank"> </div>
+                    <div class="col-xs-12 blank">&nbsp;</div>
                     <div class="col-xs-12">Je, sous-signé {{ receipt.person }}, {{ receipt.position }}, certifie que {{ membership.person.title }} {{ membership.person }} a bien adhéré au syndicat {{ membership.structure.name }} pour l'année {% if receipt.begin|date('Y') != receipt.end|date('Y') %}{{ receipt.begin|date('Y') }} - {% endif %}{{ receipt.end|date('Y') }}.en payant la somme de {{ membership.amount }} euros.</div>
-                    <div class="col-xs-12 blank"> </div>
+                    <div class="col-xs-12 blank">&nbsp;</div>
                     <div class="col-xs-12">
                         <div class="pull-right">
                             <div class="title">Le {{ "now"|date('d/m/Y') }}</div>
@@ -48,9 +52,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-footer row">
-                    <div class="col-xs-8">{{ membership.structure.name }}</div>
-                    <div class="col-xs-4"><img src="{{ absolute_url(asset(membership.structure.logo)) }}" alt="Logo de {{ membership.structure.name }}" class="logo-large" /></div>
+                <div class="panel-footer jumbotron row">
+                    <span class="pull-right"><img src="{{ absolute_url(asset('uploads/' ~ membership.structure.logo)) }}" alt="Logo de {{ membership.structure.name }}" class="logo-large" /></span>
+                    {{ membership.structure.name }}
                 </div>
             </div>
         </div>
