--- a/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
@@ -66,16 +66,16 @@
                     </span>
                 {% endif %}
 
-                <span class="col-sm-1">
+                <div class="col-sm-1">
                     {% if structure.logo is not null %}
                         <img src="{{ asset('uploads/' ~ structure.logo) }}" alt="{{ structure.logo }}" class="logo"/>
                     {% endif %}
-                </span>
-                <span class="col-sm-10">
-                    <span class="col-sm-12">
+                </div>
+                <div class="col-sm-10">
+                    <div class="col-sm-12 title">
                         {% if is_granted('ROLE_ADMIN') %}
                             <a href="{{ path('user_register_join', {'slug': structure.slug}) }}" title="Adhérer à la structure {{ structure.name }}">
-                                {{ structure.area }} :
+                                {{ structure.area }}
                                 {{ structure.name }}
                                 ({{ structure.slug }})
                             </a>
@@ -90,11 +90,13 @@
                                 {{ structure.name }}
                             </a>
                         {% endif %}
-                    </span>
-                    <span class="col-sm-12">
-                        {{ structure.printableAddress }}
-                    </span>
-                </span>
+                    </div>
+                    {% if structure.fullname is not null %}<div class="col-sm-12">{{ structure.fullname }}</div>{% endif %}
+                    <div class="col-sm-12">
+                        {% if structure.email is not null %}<a href="mailto:{{ structure.email }}" title="{{ structure.email }}">{{ icon('envelope') }}</a>{% endif %}
+                        {% if structure.address['number'] is not null %}<a href="#" title="{{ structure.printableAddress }}">{{ icon('home') }}</a>{% endif %}
+                    </div>
+                </div>
             </li>
         {% else %}
             <li class="noentity structure">
