--- a/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
@@ -75,18 +75,18 @@
                     <div class="col-sm-12 title">
                         {% if is_granted('ROLE_ADMIN') %}
                             <a href="{{ path('user_register_join', {'slug': structure.slug}) }}" title="Adhérer à la structure {{ structure.name }}">
-                                {{ structure.area }} :
+                                {% if structure.area is not null %}{{ structure.area }} :{% endif %}
                                 {{ structure.name }}
                                 ({{ structure.slug }})
                             </a>
                         {% elseif not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                             <a href="{{ path('user_register_register', {'slug': structure.slug}) }}" title="Adhérer à la structure {{ structure.name }}">
-                                {{ structure.area }} :
+                                {% if structure.area is not null %}{{ structure.area }} :{% endif %}
                                 {{ structure.name }}
                             </a>
                         {% elseif is_granted('ROLE_MEMBER') %}
                             <a href="{{ path('user_register_join', {'slug': structure.slug}) }}" title="Adhérer à la structure {{ structure.name }}">
-                                {{ structure.area }} :
+                                {% if structure.area is not null %}{{ structure.area }} :{% endif %}
                                 {{ structure.name }}
                             </a>
                         {% endif %}
@@ -94,7 +94,7 @@
                     {% if structure.fullname is not null %}<div class="col-sm-12">{{ structure.fullname }}</div>{% endif %}
                     <div class="col-sm-12">
                         {% if structure.email is not null %}<a href="mailto:{{ structure.email }}" title="{{ structure.email }}">{{ icon('envelope') }}</a>{% endif %}
-                        {% if structure.address['city'] is not null %}<a href="#" title="{{ structure.printableAddress }}">{{ icon('home') }}</a>{% endif %}
+                        {% if structure.address['city'] is not null and structure.address['city'] != '-' %}<a href="#" title="{{ structure.printableAddress }}">{{ icon('home') }}</a>{% endif %}
                     </div>
                 </div>
             </li>
