SubMenu Parameter pour la gestion des structures

--- a/src/Pigass/CoreBundle/Resources/views/Structure/edit.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Structure/edit.html.twig
@@ -8,6 +8,11 @@
     {% if structure is not null %}{{ structure.name }} - Modification {% else %} Structure - Ajout {% endif %}
 {% endblock %}
 
+{% block action %}
+    </ul>
+    {{ mopa_bootstrap_menu('parameter') }}
+{% endblock %}
+
 {% block content %}
     {{ form(form) }}
 {% endblock %}
