--- a/src/Pigass/ParameterBundle/Resources/views/Admin/index.html.twig
+++ b/src/Pigass/ParameterBundle/Resources/views/Admin/index.html.twig
@@ -1,6 +1,13 @@
 {% extends 'PigassCoreBundle::layout.html.twig' %}
 
-{% block headline %}Paramètres{% endblock %}
+{% block title %}{{ parent() }} - {{ structure.name }} - Paramètres{% endblock %}
+
+{% block headline %}{{ structure.name }} - Paramètres{% endblock %}
+
+{% block action %}
+    </ul>
+    {{ mopa_bootstrap_menu('parameter') }}
+{% endblock %}
 
 {% block content %}
   {{ form(parameter_form) }}
