--- a/src/Pigass/CoreBundle/Resources/views/Receipt/index.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Receipt/index.html.twig
@@ -1,27 +1,29 @@
 {% extends 'PigassCoreBundle::layout.html.twig' %}
 
 {% block title %}
-    {{ parent() }} - Reçus
+    {{ parent() }} - {{ structure.name }}- Signataires
 {% endblock %}
 
 {% block headline %}
-    receipts
+    {{ structure.name }} - Signataires
 {% endblock %}
 
 {% block action %}
-    {% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-        <li class="panel panel-primary">
-            <div class="panel-heading">Pour adhérer, veuillez cliquer sur la receipt de votre région, et vous enregistrer en 3 étapes : validation du formulaire, confirmation de l'adresse e-mail et paiement de la cotisation.</div>
-        </li>
-    {% endif %}
+        {% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+            <li class="panel panel-primary">
+                <div class="panel-heading">Pour adhérer, veuillez cliquer sur la receipt de votre région, et vous enregistrer en 3 étapes : validation du formulaire, confirmation de l'adresse e-mail et paiement de la cotisation.</div>
+            </li>
+        {% endif %}
 
-    {% if is_granted('ROLE_ADMIN') %}
-        <li class="btn btn-primary">
-            <a href="{{ path('core_receipt_new', {'slug': structure.slug}) }}" title="Ajouter une nouvelle receipt">
-                {{ icon('plus') }} Ajouter
-            </a>
-        </li>
-    {% endif %}
+        {% if is_granted('ROLE_ADMIN') %}
+            <li class="btn btn-primary">
+                <a href="{{ path('core_receipt_new', {'slug': structure.slug}) }}" title="Ajouter une nouvelle receipt">
+                    {{ icon('plus') }} Ajouter
+                </a>
+            </li>
+        {% endif %}
+    </ul>
+    {{ mopa_bootstrap_menu('parameter') }}
 {% endblock %}
 
 {% block content %}
