--- a/src/Pigass/UserBundle/Resources/views/Register/questionIndex.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/questionIndex.html.twig
@@ -1,15 +1,17 @@
 {% extends 'PigassCoreBundle::layout.html.twig' %}
 
-{% block title %}{{ parent() }} - Questions{% endblock %}
+{% block title %}{{ parent() }}{% if slug != 'all' %} - {{ slug }}{% endif %} - Questions{% endblock %}
 
 {% block headline %}Questions{% endblock %}
 
 {% block action %}
-    <li class="btn btn-primary">
-        <a href="{{ path('user_register_question_new') }}" title="Ajouter une question">
-            {{ icon('plus-sign') }} Ajouter
-        </a>
-    </li>
+        <li class="btn btn-primary">
+            <a href="{{ path('user_register_question_new', {'slug': slug}) }}" title="Ajouter une question">
+                {{ icon('plus-sign') }} Ajouter
+            </a>
+        </li>
+    </ul>
+    {% if slug != 'all' %}{{ mopa_bootstrap_menu('parameter') }}{% endif %}
 {% endblock %}
 
 {% block content %}
@@ -21,12 +23,12 @@
                     <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown">Actions <span class="caret"></span></button>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="{{ path('user_register_question_edit', {'id': question.id}) }}" title="Modifier la question complémentaire" class="edit">
+                            <a href="{{ path('user_register_question_edit', {'id': question.id, 'slug': slug}) }}" title="Modifier la question complémentaire" class="edit">
                                 {{ icon('pencil') }} Modifier
                             </a>
                         </li>
                         <li>
-                            <a href="{{ path('user_register_question_index') }}" title="Supprimer la question complémentaire" class="delete confirm">
+                            <a href="{{ path('user_register_question_index', {'slug': slug}) }}" title="Supprimer la question complémentaire" class="delete confirm">
                                 {{ icon('trash') }} Supprimer
                             </a>
                         </li>
