--- a/src/Pigass/CoreBundle/Resources/public/css/main.css
+++ b/src/Pigass/CoreBundle/Resources/public/css/main.css
@@ -125,6 +125,7 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 #submenu ul, #submenu li { width: 100%; padding: 5px; }
 #submenu li a, #submenu li a:hover { text-decoration: none; }
 #submenu li.panel { list-style: none; margin: 0; font-size: 1.1em; text-align: justify; line-height: 1.4em; }
+#submenu .description .panel-heading { text-align: center; font-weight: bold; }
 
 .btn-primary a, #submenu .btn-primary a:hover { color: #fff; }
 .btn-danger a, #submenu .btn-danger a:hover { color: #fff; }
@@ -161,8 +162,11 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 .right { text-align: right }
 
 .row { margin-left: 0; margin-right: 0; }
+.mapael .map { margin-left: auto; margin-right: auto; position: relative; max-width: 800px; }
+.mapael .mapTooltip { position: absolute; background-color: #fff; moz-opacity: 0.90; opacity: 0.90; filter: alpha(opacity=90); border-radius: 10px; padding: 10px; z-index: 1000; max-width: 200px; display: none; color: #343434; }
 
 img.sign { display: block; max-width: 100px; max-height: 80px; }
 img.logo { display: block; max-width: 60px; max-height: 40px; }
 img.logo-small { display: block; max-width: 40px; max-height: 40px; }
+img.logo-description { display: block; max-width: 120px; }
 img.logo-large { display: block; max-width: 100px; max-height: 60px; }
