Ajout d'une image de background

--- a/src/Pigass/CoreBundle/Resources/views/Receipt/index.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Receipt/index.html.twig
@@ -27,7 +27,7 @@
 {% endblock %}
 
 {% block content %}
-    <ul class="entities receipts list-group">
+    <ul class="entities receipts list-group panel panel-default">
         {% for receipt in receipts %}
             <li class="entity receipt list-group-item row">
                 {% if is_granted('ROLE_ADMIN') %}
