--- a/src/Pigass/ParameterBundle/Resources/views/Admin/index.html.twig
+++ b/src/Pigass/ParameterBundle/Resources/views/Admin/index.html.twig
@@ -10,7 +10,9 @@
 {% endblock %}
 
 {% block content %}
-  {{ form(parameter_form) }}
+    <div class="panel panel-default">
+        {{ form(parameter_form) }}
+    </div>
 {% endblock %}
 
 {% block javascripts %}
