--- a/src/Pigass/UserBundle/Resources/views/Payment/index.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Payment/index.html.twig
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block content %}
-    <ul class="entities gateways list-group">
+    <ul class="entities gateways list-group panel panel-default">
         {% for gateway in gateways %}
             <li class="entity gateway list-group-item row">
                 <span class="btn-group pull-right">
