--- a/src/Pigass/UserBundle/Resources/views/Person/exportMail.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Person/exportMail.html.twig
@@ -4,7 +4,7 @@
 {% block headline %}{{ structure }} : adresses mails{% endblock %}
 
 {% block content %}
-    <div>Séparateur :
+    <div class="panel panel-primary">Séparateur :
         <select id="separator" class="">
             <option value=", " selected>,</option>
             <option value=" ; ">;</option>
