--- a/src/Pigass/UserBundle/Resources/views/Register/question.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/question.html.twig
@@ -5,5 +5,7 @@
 {% block headline %}Questions complémentaires{% endblock %}
 
 {% block content %}
-    {{ form(form) }}
+    <div class="panel panel-default">
+        {{ form(form) }}
+    </div>
 {% endblock %}
