--- a/src/Pigass/UserBundle/Resources/views/Register/questionEdit.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/questionEdit.html.twig
@@ -13,5 +13,7 @@
 {% endblock %}
 
 {% block content %}
-    {{ form(form) }}
+    <div class="panel panel-default">
+        {{ form(form) }}
+    </div>
 {% endblock %}
