--- a/src/Pigass/CoreBundle/Resources/public/css/main.css
+++ b/src/Pigass/CoreBundle/Resources/public/css/main.css
@@ -54,7 +54,7 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 #search input:hover{ }
 #search input:active{ }
 
-#content { min-height: 530px; padding: 5px;  background-color: #eee; }
+#content { min-height: 530px; padding: 5px; margin-top: 10px;  background-color: #eee; }
 #content .odd { background-color: #fafafa; }
 #content .even { background-color: #eaeaea; }
 #content .subodd { background-color: #e1e1e1; }
@@ -120,6 +120,8 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 #content progress.bar::-webkit-progress-bar { background-color: #ff8875; }
 #content progress.bar::-webkit-progress-value { background-color: #75ff88; }
 #content li.tag { margin-bottom: 3px; }
+#content .panel { max-width: 1000px; margin: auto; padding: 15px; }
+#content .form-horizontal .form-group { margin-right: 15px; margin-left: 15px; }
 
 #submenu { padding: 10px; }
 #submenu ul, #submenu li { width: 100%; padding: 5px; }
@@ -159,11 +161,12 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 .green { background-color: green; text-align: center; font-weight: bold; }
 .grey { background-color: #e1e1e1; }
 .inline { display: inline-block; }
-.right { text-align: right }
+.right { text-align: right; }
+.left { text-align: left; }
 
 .row { margin-left: 0; margin-right: 0; }
-.mapael .map { margin-left: auto; margin-right: auto; position: relative; max-width: 800px; }
-.mapael .mapTooltip { position: absolute; background-color: #fff; moz-opacity: 0.90; opacity: 0.90; filter: alpha(opacity=90); border-radius: 10px; padding: 10px; z-index: 1000; max-width: 200px; display: none; color: #343434; }
+.mapael .map { margin-left: auto; margin-right: auto; position: relative; max-width: 800px; padding: 20px; }
+.mapael .mapTooltip { position: absolute; background-color: #fff; moz-opacity: 0.90; opacity: 0.90; filter: alpha(opacity=90); border-radius: 5px; padding: 10px; z-index: 1000; max-width: 200px; display: none; color: #343434; }
 
 img.sign { display: block; max-width: 100px; max-height: 80px; }
 img.logo { display: block; max-width: 60px; max-height: 40px; }
