--- a/src/Pigass/CoreBundle/Resources/views/Structure/edit.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Structure/edit.html.twig
@@ -14,5 +14,7 @@
 {% endblock %}
 
 {% block content %}
-    {{ form(form) }}
+    <div class="panel panel-default">
+        {{ form(form) }}
+    </div>
 {% endblock %}
