--- a/src/Pigass/UserBundle/Resources/views/Payment/edit.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Payment/edit.html.twig
@@ -9,5 +9,7 @@
 {% endblock %}
 
 {% block content %}
-    {{ form(form) }}
+    <div class="panel panel-default">
+        {{ form(form) }}
+    </div>
 {% endblock %}
