--- a/src/Pigass/UserBundle/Resources/views/Register/register.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/register.html.twig
@@ -11,5 +11,7 @@
 {% endblock %}
 
 {% block content %}
-    {{ form(form) }}
+    <div class="panel panel-default">
+        {{ form(form) }}
+    </div>
 {% endblock %}
